# urd

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md  nomos.md  nomos.nomos
ArgosCI/: Dockerfile  config.json
licenses/: MIT-Fortuna
src/: error.rs  journal_entries.rs  main.rs  moods.rs  paths.rs  render.rs  search.rs  settings.rs  startup.rs  tips_and_tricks.rs
src/gui/: about.rs  file_picker.rs  help.rs  important_days.rs  licenses.rs  main_page.rs  main_page_side_panel.rs  mod.rs  moods.rs  search_page.rs  settings.rs  welcome_page.rs
