[package]
name = "urd"
version = "0.7.0"
edition = "2021"
authors = ["Xqhare"]
license = "EPL-2.0 OR MIT"

[profile.release]
lto = "fat"

[dependencies]
eframe = "0.30"
horae = { git = "https://github.com/xqhare/horae" }
nabu = { git = "https://github.com/xqhare/nabu" }
fortuna = { git = "https://github.com/xqhare/fortuna" }
